practice/service/Ingress/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80        # 정할 수 있는 포트(선택)
    targetPort: 80  # 정해져 있는 포트(강제)
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-lb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: goapp
  ports:
  - port: 80
    targetPort: 8080

# IP가 다르면 동일한 포트를 가져도 된다.
